# sqlafunccodegen

./: README.md  pyproject.toml
.github/workflows/: push_checks.yml
scripts/: get_graphile_file.py
sqlafunccodegen/: main.py
tests/: generate.sh  out_asyncpg_only.py  out_func.py  out_python.py  out_sqlalchemy.py  schema.ddl  test.py
