[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13,<4"
name = "sqlafunccodegen"
dependencies = [
    "asyncpg==0.30.*",
    "dukpy==0.3.*",
    "pydantic==2.*",
    "sqlalchemy[asyncio]==2.0.31",
    "typer==0.20.*"
]
version = "0.0.1"

[project.scripts]
sqlafunccodegen = "sqlafunccodegen.main:cli"

[tool.setuptools.packages.find]
include = ["sqlafunccodegen"]
namespaces = false

[tool.black]
line-length = 80
extend-exclude = '^/tests/out'

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2
combine_as_imports = true
py_version=313
extend_skip_glob = ["tests/out*"]

[tool.pyright]
pythonVersion = "3.13"
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff]
lint.select = ["F401"]
line-length = 80
extend-exclude = ['tests/out*']
