[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13,<4"
name = "sqlafunccodegen"
dependencies = [
    "asyncpg==0.*",
    "dukpy==0.3.*",
    "pydantic==2.*",
    "sqlalchemy[asyncio]==2.0.*",
    "typer==0.*"
]
version = "0.0.1"

[project.scripts]
sqlafunccodegen = "sqlafunccodegen.main:cli"

[tool.setuptools.packages.find]
include = ["sqlafunccodegen"]
namespaces = false

[tool.pyright]
pythonVersion = "3.13"
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff]
lint.select = [
  "A",
  "B007",
  "B009",
  "B010",
  "B013",
  "B014",
  "B015",
  "B018",
  "B020",
  "B023",
  "F401",
  "F402",
  "F541",
  "F634",
  "F841",
  "F842",
  "FAST001",
  "FAST002",
  "FURB",
  "I",
  "PERF",
  "PIE",
  "PLC0414",
  "RET",
  "RUF",
  "SIM",
  "UP",
]
line-length = 80
extend-exclude = ['tests/out*']

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

